--- a/files/Installation.ipynb
+++ b/files/Installation.ipynb
@@ -16,6 +16,17 @@
   },
   "cells": [
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Zl6yrjD75Fx7"
+      },
+      "source": [
+        "# Copyright (c) Facebook, Inc. and its affiliates. All Rights Reserved"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "6XzxTZfKwFNo"
@@ -121,7 +132,7 @@
         "!pip install apex -f https://dl.fbaipublicfiles.com/vissl/packaging/apexwheels/{version_str}/download.html\n",
         "\n",
         "# install VISSL\n",
-        "!pip install vissl -f https://dl.fbaipublicfiles.com/vissl/packaging/visslwheels/download.html"
+        "!pip install vissl"
       ],
       "execution_count": null,
       "outputs": []
