--- a/files/Installation.ipynb
+++ b/files/Installation.ipynb
@@ -82,7 +82,7 @@
         "conda create -n vissl python=3.8\n",
         "conda activate vissl\n",
         "conda install -c pytorch pytorch=1.7.1 torchvision cudatoolkit=10.2\n",
-        "conda install -c vissl apex vissl\n",
+        "conda install -c vissl -c iopath -c conda-forge -c pytorch -c defaults apex vissl\n",
         "```\n",
         "\n",
         "For other versions of PyTorch, Python, CUDA, please modify the above instructions with the\n",
@@ -175,7 +175,7 @@
         "\n",
         "**Step 4: Install VISSL**\n",
         "\n",
-        "```\n",
+        "```bash\n",
         "# clone vissl repository\n",
         "cd $HOME && git clone --recursive https://github.com/facebookresearch/vissl.git && cd $HOME/vissl/\n",
         "# install vissl dependencies\n",
