update source conda install tutorial instruction

--- a/tutorials/Installation.ipynb
+++ b/tutorials/Installation.ipynb
@@ -217,7 +217,7 @@
         "**Step 3: Install APEX (conda)**\n",
         "\n",
         "```bash\n",
-        "conda install -c vissl apex vissl\n",
+        "conda install -c vissl apex\n",
         "```\n",
         "\n",
         "**Step 4: Install VISSL**\n",
