--- a/files/Installation.ipynb
+++ b/files/Installation.ipynb
@@ -204,7 +204,7 @@
         "If you don't have anaconda, [run this bash scrip to install conda](https://github.com/facebookresearch/vissl/blob/master/docker/common/install_conda.sh).\n",
         "\n",
         "```bash\n",
-        "conda create -n vissl python=3.7\n",
+        "conda create -n vissl_env python=3.7\n",
         "source activate vissl_env\n",
         "```\n",
         "\n",
