fix a small typo

--- a/tutorials/Large_Scale_Training.ipynb
+++ b/tutorials/Large_Scale_Training.ipynb
@@ -35,7 +35,7 @@
       "source": [
         "# Using LARC\n",
         "\n",
-        "ARC (Large Batch Training of Convolutional Networks) is a technique proposed by **Yang You, Igor Gitman, Boris Ginsburg** in https://arxiv.org/abs/1708.03888 for improving the convergence of large batch size trainings.\n",
+        "LARC (Large Batch Training of Convolutional Networks) is a technique proposed by **Yang You, Igor Gitman, Boris Ginsburg** in https://arxiv.org/abs/1708.03888 for improving the convergence of large batch size trainings.\n",
         "LARC uses the ratio between gradient and parameter magnitudes is used to calculate an adaptive local learning rate for each individual parameter.\n",
         "\n",
         "See the [LARC paper](<https://arxiv.org/abs/1708.03888>) for calculation of learning rate. In practice, it modifies the gradients of parameters as a proxy\n",
