move apex after -f

--- a/tutorials/Benchmark_Full_Finetuning_on_ImageNet_1K.ipynb
+++ b/tutorials/Benchmark_Full_Finetuning_on_ImageNet_1K.ipynb
@@ -75,7 +75,7 @@
         "print(version_str)\n",
         "\n",
         "# install apex (pre-compiled with optimizer C++ extensions and CUDA kernels)\n",
-        "!pip install apex -f https://dl.fbaipublicfiles.com/vissl/packaging/apexwheels/{version_str}/download.html\n",
+        "!pip install -f https://dl.fbaipublicfiles.com/vissl/packaging/apexwheels/{version_str}/download.html apex\n",
         "\n",
         "# install VISSL\n",
         "!pip install vissl"
