--- a/tutorials/Installation.ipynb
+++ b/tutorials/Installation.ipynb
@@ -129,7 +129,7 @@
         "print(version_str)\n",
         "\n",
         "# install apex (pre-compiled with optimizer C++ extensions and CUDA kernels)\n",
-        "!pip install apex -f https://dl.fbaipublicfiles.com/vissl/packaging/apexwheels/{version_str}/download.html\n",
+        "!pip install -f https://dl.fbaipublicfiles.com/vissl/packaging/apexwheels/{version_str}/download.html apex\n",
         "\n",
         "# install VISSL\n",
         "!pip install vissl"
@@ -170,7 +170,7 @@
         "**Step 3: Install APEX (pip)**\n",
         "\n",
         "```bash\n",
-        "pip install apex -f https://dl.fbaipublicfiles.com/vissl/packaging/apexwheels/py37_cu101_pyt171/download.html\n",
+        "pip install -f https://dl.fbaipublicfiles.com/vissl/packaging/apexwheels/py37_cu101_pyt171/download.html apex\n",
         "```\n",
         "\n",
         "**Step 4: Install VISSL**\n",
